Add two more section grid sections

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <section>
       <h3>Apps ></h3>
       <article>
-        <header class="sg-img1">
+        <header class="bckg-image sg-img1">
           <h5>Most Popular</h5>
           <h3>
             <a href="#">
@@ -258,277 +258,236 @@
         <img src="./images/latest.png" alt="latest">
       </article>
       <div class="sg-article-list">
-      <ul>
-        <li>This tool automatically removes the background from any video or GIF</li>
-        <li>WhatsApp's dark mode is a fucking bummer</li>
-        <li>How to turn any long read into a fake podcast with Google Assistant</li>
-        <li>Twitter is working on its version of Stories and we're already over it</li>
-        <li>It's painfully easy to see who's liked you on Tinder without paying for Gold</li>
-      </ul>
-    </div>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
+        <ul>
+          <li>This tool automatically removes the background from any video or GIF</li>
+          <li>WhatsApp's dark mode is a fucking bummer</li>
+          <li>How to turn any long read into a fake podcast with Google Assistant</li>
+          <li>Twitter is working on its version of Stories and we're already over it</li>
+          <li>It's painfully easy to see who's liked you on Tinder without paying for Gold</li>
+        </ul>
       </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
     </section>
     <section>
       <h3>Gear ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
+      <article>
+        <header class="bckg-image sg-img2">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              A love letter to the OnePlus Bullets Wireless
+              2 earbuds — the only reliable thing in my life
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Ivan Mehta
+              </a>
+            </li>
+            <li>
+              <p>3 days ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
+      <article class="sub-article">
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>Sonos abandons 'Recycle Mode' on old speakers after much backlash</b>
+          </p>
+        </div>
+        <img src="./images/sonos.png" alt="latest">
+      </article>
+      <div class="sg-article-list">
+        <ul>
+          <li>Smart trainers have made cycling indoors far less shit</li>
+          <li>Fuck this — you'll soon get push notification ads on iOS</li>
+          <li>The iPhone can now (barely) run Android thanks to Project Sandcastle</li>
+          <li>Thanks, coronavirus: Apple reportedly has few replacement iPhones to go around</li>
+          <li>You can now jailbreak the iPhone... with a rooted Android phone</li>
+        </ul>
       </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <section>
-      <h3>Tech ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
-      </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <section>
-      <h3>Creative ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
-      </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <section>
-      <h3>Podium ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
-      </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <section>
-      <h3>Insights ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
-      </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <section>
-      <h3>Launch ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
-      </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <section>
-      <h3>Distract ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
-      <div>
-        <article>ARTICLE LINK/BACKGROUND</article>
-        <img src="#" alt="">
-      </div>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-  </div>
-  <section>
-    <h2>Latest deals ></h2>
-    <ul class="latest-deals-grid">
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-      <li>
-        <a href="#">
-          <img src="#" alt="">
-        </a>
-        <a href="">Text with link goes here</a>
-        <span>Price tag 1</span>
-        <span>Price tag 2</span>
-      </li>
-    </ul>
-  </section>
-  <footer>
-    <div class="footer-links">
-      <ul class="footer-links-ln1">
-        <li>
-          <a href="#">
-            facebook
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            twitter
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            youtube
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            instagram
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            pinterest
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            email
-          </a>
-        </li>
-      </ul>
-      <ul class="footer-links-ln2">
-        <li>
-          <a href="#">
-            events
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            about
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            advertise
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            jobs
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            contact
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer-legal">
-      <span>logo and some text</span>
-      <span>some more text</span>
-      <span>text again</span>
-    </div>
-  </footer>
+      <section>
+        <h3>Tech ></h3>
+        <article>
+          <header class="bckg-image sg-img3">
+            <h5>Most Popular</h5>
+            <h3>
+              <a href="#">
+                Trump's retweet with doctored Biden video earns Twitter's
+                first 'manipulated media' label
+              </a>
+            </h3>
+            <ul>
+              <li>
+                <a href="#">
+                  Ivan Mehta
+                </a>
+              </li>
+              <li>
+                <p>16 hours ago</p>
+              </li>
+            </ul>
+          </header>
+        </article>
+        <article class="sub-article">
+          <div>
+            <h3>LATEST</h3>
+            <p>
+              <b>Google launches TensorFlow for quantum computers</b>
+            </p>
+          </div>
+          <img src="./images/google-tensor.png" alt="latest">
+        </article>
+        <div class="sg-article-list">
+          <ul>
+            <li>Almost half of Indian startups don’t hire women to save on maternity costs</li>
+            <li>John Oliver roasts Disney-owned Hotstar for making cuts to his show in India</li>
+            <li>How Slack keeps employees focused while being a distracting app</li>
+            <li>Trump's retweet with doctored Biden video earns Twitter's first 'manipulated media' label</li>
+            <li>Pardon the Intrusion #12: Private by default</li>
+          </ul>
+        </div>
+
+
+        <section>
+          <h2>Latest deals ></h2>
+          <ul class="latest-deals-grid">
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="#" alt="">
+              </a>
+              <a href="">Text with link goes here</a>
+              <span>Price tag 1</span>
+              <span>Price tag 2</span>
+            </li>
+          </ul>
+        </section>
+        <footer>
+          <div class="footer-links">
+            <ul class="footer-links-ln1">
+              <li>
+                <a href="#">
+                  facebook
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  twitter
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  youtube
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  instagram
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  pinterest
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  email
+                </a>
+              </li>
+            </ul>
+            <ul class="footer-links-ln2">
+              <li>
+                <a href="#">
+                  events
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  about
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  advertise
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  jobs
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  contact
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-legal">
+            <span>logo and some text</span>
+            <span>some more text</span>
+            <span>text again</span>
+          </div>
+        </footer>
 </body>
 
 </html>
