Adds content to the latest deals class section

--- a/index.html
+++ b/index.html
@@ -351,9 +351,44 @@
         </div>
 
 
-        <section>
+        <section class="latest-deals">
           <h2>Latest deals ></h2>
-          <ul class="latest-deals-grid">
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img9"></a>
+            <div class="ln-atcl-head">
+              <h3>The 2020 All-in-One Data Scientist Mega Bundle</h3>
+              <p><span class="line-through">$6000</span><span> - </span>$39.99</p>
+            </div>
+          </div>
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img10"></a>
+            <div class="ln-atcl-head">
+              <h3>The Complete 2020 PMP Training Bundle</h3>
+              <p><span class="line-through">$999.9</span><span> - </span>$59.9</p>
+            </div>
+          </div>
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img11"></a>
+            <div class="ln-atcl-head">
+              <h3>The Microsoft Azure 203 Certification Training Course</h3>
+              <p><span class="line-through">$399.9</span><span> - </span>$29.9</p>
+            </div>
+          </div>
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img12"></a>
+            <div class="ln-atcl-head">
+              <h3>The Complete Python Certification Bootcamp Bundle</h3>
+              <p><span class="line-through">$390.9</span><span> - </span>$29.9</p>
+            </div>
+          </div>
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img13"></a>
+            <div class="ln-atcl-head">
+              <h3>The 2020 Premium Ethical Hacking Certification Bundle</h3>
+              <p><span class="line-through">$1600</span><span> - </span>$99.9</p>
+            </div>
+          </div>
+          <!-- <ul class="latest-deals-grid">
             <li>
               <a href="#">
                 <img src="#" alt="">
@@ -418,7 +453,7 @@
               <span>Price tag 1</span>
               <span>Price tag 2</span>
             </li>
-          </ul>
+          </ul> -->
         </section>
         <footer>
           <div class="footer-links">
