finish latest-deals mobile section and start footer links icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="//db.onlinewebfonts.com/c/4712603f54ff886c6ba46185644675ba?family=ShentoxW01-Light" rel="stylesheet"
     type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -388,84 +389,39 @@
               <p><span class="line-through">$1600</span><span> - </span>$99.9</p>
             </div>
           </div>
-          <!-- <ul class="latest-deals-grid">
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-            <li>
-              <a href="#">
-                <img src="#" alt="">
-              </a>
-              <a href="">Text with link goes here</a>
-              <span>Price tag 1</span>
-              <span>Price tag 2</span>
-            </li>
-          </ul> -->
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img14"></a>
+            <div class="ln-atcl-head">
+              <h3>Learn How to Draw Freebie Bundle</h3>
+              <p><span class="line-through">$0</span><span> - </span>$0</p>
+            </div>
+          </div>
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img15"></a>
+            <div class="ln-atcl-head">
+              <h3>The Complete 2020 Microsoft Azure Certification Prep Bundle</h3>
+              <p><span class="line-through">$1839.99</span><span> - </span>$39</p>
+            </div>
+          </div>
+          <div class="ln-mobile-atcl-wrapper">
+            <a href="#" class="ln-bg-img img16"></a>
+            <div class="ln-atcl-head">
+              <h3>StackSkills Unlimited: Lifetime Access</h3>
+              <p><span class="line-through">$1495</span><span> - </span>$59</p>
+            </div>
+          </div>
         </section>
         <footer>
           <div class="footer-links">
             <ul class="footer-links-ln1">
               <li>
                 <a href="#">
-                  facebook
+                  <i class="fa fa-facebook-square"></i>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  twitter
+                  <i class="fa fa-twitter-square"></i>
                 </a>
               </li>
               <li>
