--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
   <section class="latest-funding">
     <h2>Latest Funding rounds on index.co ></h2>
     <ul class="lf-links">
-      <li>See More</li><span class="lf-links-bars"> | </span>
-      <li>Get Updates by email</li><span class="lf-links-bars"> | </span>
+      <li>See More<span class="lf-links-bars"> | </span></li>
+      <li>Get Updates by email<span class="lf-links-bars"> | </span></li>
       <li>Add Info</li>
     </ul>
     <div class="fund-banner-container">
@@ -309,6 +309,7 @@
           <li>You can now jailbreak the iPhone... with a rooted Android phone</li>
         </ul>
       </div>
+    </section>
       <section>
         <h3>Tech ></h3>
         <article>
@@ -350,135 +351,135 @@
             <li>Pardon the Intrusion #12: Private by default</li>
           </ul>
         </div>
-
-
-        <section class="latest-deals">
-          <h2>Latest deals ></h2>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img9"></a>
-            <div class="ln-atcl-head">
-              <h3>The 2020 All-in-One Data Scientist Mega Bundle</h3>
-              <p><span class="line-through">$6000</span><span> - </span>$39.99</p>
-            </div>
+      </section>
+      </div>
+      <section class="latest-deals">
+        <h2>Latest deals ></h2>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img9"></a>
+          <div class="ln-atcl-head">
+            <h3>The 2020 All-in-One Data Scientist Mega Bundle</h3>
+            <p><span class="line-through">$6000</span><span> - </span>$39.99</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img10"></a>
-            <div class="ln-atcl-head">
-              <h3>The Complete 2020 PMP Training Bundle</h3>
-              <p><span class="line-through">$999.9</span><span> - </span>$59.9</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img10"></a>
+          <div class="ln-atcl-head">
+            <h3>The Complete 2020 PMP Training Bundle</h3>
+            <p><span class="line-through">$999.9</span><span> - </span>$59.9</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img11"></a>
-            <div class="ln-atcl-head">
-              <h3>The Microsoft Azure 203 Certification Training Course</h3>
-              <p><span class="line-through">$399.9</span><span> - </span>$29.9</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img11"></a>
+          <div class="ln-atcl-head">
+            <h3>The Microsoft Azure 203 Certification Training Course</h3>
+            <p><span class="line-through">$399.9</span><span> - </span>$29.9</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img12"></a>
-            <div class="ln-atcl-head">
-              <h3>The Complete Python Certification Bootcamp Bundle</h3>
-              <p><span class="line-through">$390.9</span><span> - </span>$29.9</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img12"></a>
+          <div class="ln-atcl-head">
+            <h3>The Complete Python Certification Bootcamp Bundle</h3>
+            <p><span class="line-through">$390.9</span><span> - </span>$29.9</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img13"></a>
-            <div class="ln-atcl-head">
-              <h3>The 2020 Premium Ethical Hacking Certification Bundle</h3>
-              <p><span class="line-through">$1600</span><span> - </span>$99.9</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img13"></a>
+          <div class="ln-atcl-head">
+            <h3>The 2020 Premium Ethical Hacking Certification Bundle</h3>
+            <p><span class="line-through">$1600</span><span> - </span>$99.9</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img14"></a>
-            <div class="ln-atcl-head">
-              <h3>Learn How to Draw Freebie Bundle</h3>
-              <p><span class="line-through">$0</span><span> - </span>$0</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img14"></a>
+          <div class="ln-atcl-head">
+            <h3>Learn How to Draw Freebie Bundle</h3>
+            <p><span class="line-through">$0</span><span> - </span>$0</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img15"></a>
-            <div class="ln-atcl-head">
-              <h3>The Complete 2020 Microsoft Azure Certification Prep Bundle</h3>
-              <p><span class="line-through">$1839.99</span><span> - </span>$39</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img15"></a>
+          <div class="ln-atcl-head">
+            <h3>The Complete 2020 Microsoft Azure Certification Prep Bundle</h3>
+            <p><span class="line-through">$1839.99</span><span> - </span>$39</p>
           </div>
-          <div class="ln-mobile-atcl-wrapper">
-            <a href="#" class="ln-bg-img img16"></a>
-            <div class="ln-atcl-head">
-              <h3>StackSkills Unlimited: Lifetime Access</h3>
-              <p><span class="line-through">$1495</span><span> - </span>$59</p>
-            </div>
+        </div>
+        <div class="ln-mobile-atcl-wrapper">
+          <a href="#" class="ln-bg-img img16"></a>
+          <div class="ln-atcl-head">
+            <h3>StackSkills Unlimited: Lifetime Access</h3>
+            <p><span class="line-through">$1495</span><span> - </span>$59</p>
           </div>
-        </section>
-        <footer>
-          <div class="footer-links">
-            <ul class="footer-links-ln1">
-              <li>
-                <a href="#">
-                  <i class="fa fa-facebook-square"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-twitter-square"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  youtube
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  instagram
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  pinterest
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  email
-                </a>
-              </li>
-            </ul>
-            <ul class="footer-links-ln2">
-              <li>
-                <a href="#">
-                  events
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  about
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  advertise
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  jobs
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  contact
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-legal">
-            <span>logo and some text</span>
-            <span>some more text</span>
-            <span>text again</span>
-          </div>
-        </footer>
+        </div>
+      </section>
+      <footer>
+        <div class="footer-links">
+          <ul class="footer-links-ln1">
+            <li>
+              <a href="#">
+                <i class="fa fa-facebook-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-twitter-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                youtube
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                instagram
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                pinterest
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                email
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-links-ln2">
+            <li>
+              <a href="#">
+                events
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                about
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                advertise
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                jobs
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                contact
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-legal">
+          <span>logo and some text</span>
+          <span>some more text</span>
+          <span>text again</span>
+        </div>
+      </footer>
 </body>
 
 </html>
