Adds social icons to the layout

--- a/index.html
+++ b/index.html
@@ -427,22 +427,22 @@
             </li>
             <li>
               <a href="#">
-                youtube
+                <i class="fa fa-youtube"></i>
               </a>
             </li>
             <li>
               <a href="#">
-                instagram
+                <i class="fa fa-instagram"></i>
               </a>
             </li>
             <li>
               <a href="#">
-                pinterest
+                <i class="fa fa-pinterest"></i>
               </a>
             </li>
             <li>
               <a href="#">
-                email
+                <i class="fa fa-envelope"></i>
               </a>
             </li>
           </ul>
