Adds creative sections to the layout

--- a/index.html
+++ b/index.html
@@ -16,52 +16,54 @@
 </head>
 
 <body>
-  <nav class="nav">
-    <div class="nav-logo">
+  <div class="fixed-header">
+    <nav class="nav">
+      <div class="nav-logo">
+        <a href="#">
+          <img src="./images/tnw-logo.svg" alt="tnw logo">
+        </a>
+      </div>
+      <div class="nav-links-ipad-wrapper">
+        <div class="nav-bar-ipad-1">
+          <ul>
+            <li>News</li>
+            <li>TNW2020</li>
+            <li>Business <i class="material-icons">arrow_drop_down</i></li>
+            <li>AMAs</li>
+            <li>Sapces</li>
+            <li>Terms and condintions</li>
+          </ul>
+        </div>
+        <div class="nav-bar-ipad-2">
+          <ul>
+            <li>latest</li>
+            <li>Hard fork</li>
+            <li>plugged</li>
+            <li>fundamentals</li>
+            <li>readme</li>
+            <li><i class="material-icons">search</i></li>
+          </ul>
+        </div>
+      </div>
+      <ul class="nav-icons">
+        <li>
+          <a href="#">
+            <i class="material-icons" id="nav-search">search</i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons">menu</i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="tech-fest-cta">
       <a href="#">
-        <img src="./images/tnw-logo.svg" alt="tnw logo">
+        Did you know we have a TECH FESTIVAL? Check it out
+        <span><i class="material-icons">arrow_right_alt</i></span>
       </a>
     </div>
-    <div class="nav-links-ipad-wrapper">
-      <div class="nav-bar-ipad-1">
-        <ul>
-          <li>News</li>
-          <li>TNW2020</li>
-          <li>Business <i class="material-icons">arrow_drop_down</i></li>
-          <li>AMAs</li>
-          <li>Sapces</li>
-          <li>Terms and condintions</li>
-        </ul>
-      </div>
-      <div class="nav-bar-ipad-2">
-        <ul>
-          <li>latest</li>
-          <li>Hard fork</li>
-          <li>plugged</li>
-          <li>fundamentals</li>
-          <li>readme</li>
-          <li><i class="material-icons">search</i></li>
-        </ul>
-      </div>
-    </div>
-    <ul class="nav-icons">
-      <li>
-        <a href="#">
-          <i class="material-icons" id="nav-search">search</i>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="material-icons">menu</i>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <div class="tech-fest-cta">
-    <a href="#">
-      Did you know we have a TECH FESTIVAL? Check it out
-      <span><i class="material-icons">arrow_right_alt</i></span>
-    </a>
   </div>
   <div class="top-articles">
     <article class="top1">
@@ -352,7 +354,51 @@
         </ul>
       </div>
     </section>
+    <section>
+      <h3>Creative ></h3>
+      <article>
+        <header class="bckg-image sg-img4">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              This Amazon parody dating site is hilarious... and also kind of creepy
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Racheal Kaser
+              </a>
+            </li>
+            <li>
+              <p>16 hours ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
+      <article class="sub-article">
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>Google launches TensorFlow for quantum computers</b>
+          </p>
+        </div>
+        <img src="./images/google-tensor.png" alt="latest">
+      </article>
+      <div class="sg-article-list">
+        <ul>
+          <li>Almost half of Indian startups don’t hire women to save on maternity costs</li>
+          <li>John Oliver roasts Disney-owned Hotstar for making cuts to his show in India</li>
+          <li>How Slack keeps employees focused while being a distracting app</li>
+          <li>Trump's retweet with doctored Biden video earns Twitter's first 'manipulated media' label</li>
+          <li>Pardon the Intrusion #12: Private by default</li>
+        </ul>
+      </div>
+    </section>
+  
   </div>
+  
+
   <section class="latest-deals">
     <h2>Latest deals ></h2>
     <div class="ln-mobile-atcl-wrapper">
