Finish adding section grid content

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               </a>
             </li>
             <li>
-              <p>16 hours ago</p>
+              <p>4 weeks ago</p>
             </li>
           </ul>
         </header>
@@ -380,24 +380,187 @@
         <div>
           <h3>LATEST</h3>
           <p>
-            <b>Google launches TensorFlow for quantum computers</b>
+            <b>Leaked trailer offers a new look at Godfall, the first game announced for PS5</b>
           </p>
         </div>
-        <img src="./images/google-tensor.png" alt="latest">
+        <img src="./images/GodfallTeaser04-796x448.png" alt="godfall teaser">
       </article>
       <div class="sg-article-list">
         <ul>
-          <li>Almost half of Indian startups don’t hire women to save on maternity costs</li>
+          <li>Instagram's decision to hide photoshopped images is a disservice to art</li>
           <li>John Oliver roasts Disney-owned Hotstar for making cuts to his show in India</li>
-          <li>How Slack keeps employees focused while being a distracting app</li>
+          <li>Microsoft's new font for devs is very aesthetically pleasing (and free)</li>
           <li>Trump's retweet with doctored Biden video earns Twitter's first 'manipulated media' label</li>
           <li>Pardon the Intrusion #12: Private by default</li>
         </ul>
       </div>
     </section>
-  
+    <section>
+      <h3>Podium ></h3>
+      <article>
+        <header class="bckg-image sg-img5">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              Learn HTML & CSS in 15 minutes
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Roger Huang
+              </a>
+            </li>
+            <li>
+              <p>5 days ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
+      <article class="sub-article">
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>Mobile voting is far from perfect, but it's better than what we have now</b>
+          </p>
+        </div>
+        <img src="./images/mobile-voting.png" alt="us flag">
+      </article>
+      <div class="sg-article-list">
+        <ul>
+          <li>We shouldn't ban AI surveillance tech — we must fight to own it</li>
+          <li>How to build a survival base in Minecraft</li>
+          <li>Application performance monitoring goes full-stack baby</li>
+          <li>Everything you need to know about Bees in Minecraft</li>
+          <li>Don't be fooled: Blockchains are not miracle security solutions</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h3>Insights ></h3>
+      <article>
+        <header class="bckg-image sg-img6">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              Stop saying employees are the weakest link in cybersecurity
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Oz Alashe
+              </a>
+            </li>
+            <li>
+              <p>14 hours ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
+      <article class="sub-article">
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>That unexpected 'HIV test result' email you just got is probably a scam</b>
+          </p>
+        </div>
+        <img src="./images/Doctor-796x417.png" alt="doctor playing the guitar">
+      </article>
+      <div class="sg-article-list">
+        <ul>
+          <li>Every single tech stock in the S&P 500 index got rekt on Monday</li>
+          <li>Satoshi Nakaboto: ‘Bitcoin hits 3-month low as it dips below $8,000’</li>
+          <li>Mercedes-Benz: EV development is more important than self-driving cars</li>
+          <li>Stop saying employees are the weakest link in cybersecurity</li>
+          <li>Jack Dorsey still Twitter's CEO thanks to billion-dollar hedge fund deal</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h3>Launch ></h3>
+      <article>
+        <header class="bckg-image sg-img7">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              The hyper-compact Microlino 2.0 EV is almost too cute for words
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Matthew Beedham
+              </a>
+            </li>
+            <li>
+              <p>5 days ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
+      <article class="sub-article">
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>TNW announces Neural: A blog for human-centric AI news and analysis</b>
+          </p>
+        </div>
+        <img src="./images/neural.png" alt="robot cartoon">
+      </article>
+      <div class="sg-article-list">
+        <ul>
+          <li>PSA: Amazon Fresh grocery deliveries are now free for US Prime members</li>
+          <li>Alexis Ohanian and Serj Tankian team up to help build a social network for Armenia</li>
+          <li>Google Assistant gets its own phone number in India</li>
+          <li>Pam and Angela from The Office are re-watching the show for their new podcast</li>
+          <li>Bethesda wants you to test its game streaming tech with DOOM on iOS this year</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h3>Distract ></h3>
+      <article>
+        <header class="bckg-image sg-img8">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              A massive cache of stolen OnlyFans videos have been dumped online
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Rachel Kaser
+              </a>
+            </li>
+            <li>
+              <p>11 days ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
+      <article class="sub-article">
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>How to find the secret surfing game in Microsoft Edge</b>
+          </p>
+        </div>
+        <img src="./images/Microsoft-Edge-Surf-796x417.jpg" alt="Microsoft Edge surfing game">
+      </article>
+      <div class="sg-article-list">
+        <ul>
+          <li>Apple won't let villains have iPhones in movies, Star Wars director says</li>
+          <li>This Giphy/Jif peanut butter collab over GIF pronunciation is a no-brainer</li>
+          <li>Netflix added a top 10 list of its most-watched content — here’s how to find it</li>
+          <li>Hasbro announces 7 new D&D games starting with Baldur's Gate 3</li>
+          <li>Rumor: Call of Duty to launch free 'Warzone' battle royale game as early as February 18</li>
+        </ul>
+      </div>
+    </section>
   </div>
-  
+
 
   <section class="latest-deals">
     <h2>Latest deals ></h2>
