Finish mobile version final tweaks

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600;669;700;800;900&display=swap"
+    rel="stylesheet">
   <link href="//db.onlinewebfonts.com/c/4712603f54ff886c6ba46185644675ba?family=ShentoxW01-Light" rel="stylesheet"
     type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -69,12 +71,14 @@
     <article class="top1">
       <p>PLAY</p>
       <h2>How to check if your PC can handle the latest games</h2>
-      <p>by <a href="#">Rachel Kaser</a></p>
-      <p>
-        <i class="material-icon">clock</i>
-        1 hour ago
-        <i class="material-icon">share</i> 2
-      </p>
+      <div class="ta-atcl-credits">
+        <p>by <a href="#">Rachel Kaser</a></p>
+        <p>
+          <i class="material-icons">access_time</i>
+          1 hour ago
+          <i class="material-icons">share</i> 2
+        </p>
+      </div>
     </article>
     <article class="top2">
       <h2>Reddit, PayPal, Spotify, and more are speaking at TNW’s
@@ -83,12 +87,14 @@
     <article class="top3">
       <h2>This algorithm could improve emergency
         responses by removing lies spread on Twitter</h2>
-      <p>by <a href="#">Thomas Macaulay</a></p>
-      <p>
-        <i class="material-icon">clock</i>
-        2 hours ago
-        <i class="material-icon">share</i> 3
-      </p>
+      <div class="ta-atcl-credits">
+        <p>by <a href="#">Thomas Macaulay</a></p>
+        <p>
+          <i class="material-icons">access_time</i>
+          2 hours ago
+          <i class="material-icons">share</i> 3
+        </p>
+      </div>
     </article>
   </div>
   <section class="latest-news">
