Styles the top most nav bar to conform to the 768 view responsiveness

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul>
             <li>News</li>
             <li>TNW2020</li>
-            <li>Business <i class="material-icons">arrow_drop_down</i></li>
+            <li>Business ▾</li>
             <li>AMAs</li>
             <li>Sapces</li>
             <li>Terms and condintions</li>
