Add fixed nav bar, adjust font-size top articles and icons

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
       <h2>How to check if your PC can handle the latest games</h2>
       <div class="ta-atcl-credits">
         <p>by <a href="#">Rachel Kaser</a></p>
-        <p>
+        <p class="icon-adjust-flex">
           <i class="material-icons">access_time</i>
           1 hour ago
-          <i class="material-icons">share</i> 2
+          <i class="material-icons">share</i>2
         </p>
       </div>
     </article>
