Styles to the 1024 media query

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <li>Sapces</li>
             <li>Terms and condintions</li>
           </ul>
+          <ul class="right-lp-dsktp">
+            <li>About</li>
+            <li>Advertise</li>
+            <li>Jobs</li>
+            <li>Contact</li>
+          </ul>
         </div>
         <div class="nav-bar-ipad-2">
           <ul>
@@ -43,8 +49,8 @@
             <li>plugged</li>
             <li>fundamentals</li>
             <li>readme</li>
-            <li><i class="material-icons">search</i></li>
           </ul>
+          <i class="material-icons">search</i>
         </div>
       </div>
       <ul class="nav-icons">
