Finish mobile nav-bar and cta, add breathing space latest news and 90% love wrapper

--- a/index.html
+++ b/index.html
@@ -56,20 +56,19 @@
       <ul class="nav-icons">
         <li>
           <a href="#">
-            <i class="material-icons" id="nav-search">search</i>
+            <i class="material-icons nav-search">search</i>
           </a>
         </li>
         <li>
           <a href="#">
-            <i class="material-icons">menu</i>
+            <i class="material-icons nav-menu-icon">menu</i>
           </a>
         </li>
       </ul>
     </nav>
     <div class="tech-fest-cta">
       <a href="#">
-        Did you know we have a TECH FESTIVAL? Check it out
-        <span><i class="material-icons">arrow_right_alt</i></span>
+        Did you know we have a TECH FESTIVAL? Check it out →
       </a>
     </div>
   </div>
