Style nav-bar 1 and 2 for ipad

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="nav-links-ipad-wrapper">
         <div class="nav-bar-ipad-1">
           <ul>
-            <li>News</li>
+            <li class="first-li-item">News</li>
             <li>TNW2020</li>
             <li>Business ▾</li>
             <li>AMAs</li>
@@ -50,7 +50,9 @@
             <li>fundamentals</li>
             <li>readme</li>
           </ul>
-          <i class="material-icons">search</i>
+          <div class="search-i-wrapper">
+            <i class="material-icons nvb-search">search</i>
+          </div>
         </div>
       </div>
       <ul class="nav-icons">
