Finishes the ipad preview media query

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
         <p class="icon-adjust-flex">
           <i class="material-icons">access_time</i>
           2 hours ago
-          <i class="material-icons">share</i> 3
+          <span class="share-icon"><i class="material-icons ">share</i> 3</span>
         </p>
       </div>
     </article>
   </div>
   <div class="love-wrapper">
     <section class="latest-news">
-      <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
+      <h2 class="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
       <div class="ln-mobile-atcl-wrapper">
         <a href="#" class="ln-bg-img img1"></a>
         <div class="ln-atcl-head">
@@ -311,7 +311,7 @@
           <div>
             <h3>LATEST</h3>
             <p>
-              <b>Sonos abandons 'Recycle Mode' on old speakers after much backlash</b>
+              Sonos abandons 'Recycle Mode' on old speakers after much backlash
             </p>
           </div>
           <img src="./images/sonos.png" alt="latest">
